# table-stitcher

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  debug_merger.py  inspect_bbox.py  inspect_results.py  pyproject.toml  system_controller.py  test_no_enrich.py  test_pipeline.py
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  test.yml  upstream-smoke.yml
debug_tables/: table_1_pages_2_3.csv  table_1_pages_2_3_4.csv  table_4_pages_4_5.csv  table_5_pages_5_6.csv  table_6_pages_5_6.csv
docling_table_enricher/: __init__.py  injector.py  merger.py  models.py
examples/: basic_pipeline.py  system_controller.py
scripts/: regenerate_docling_snapshots.py  release_gate.sh
src/table_stitcher/: __init__.py  merger.py  models.py
src/table_stitcher/adapters/: README.md  __init__.py  base.py  docling.py
testdocs/: CTOaaS Application Maintenance Report - 11_24 - v1.enriched.html  CTOaaS Application Maintenance Report - 11_24 - v1.enriched.json  CTOaaS Application Maintenance Report - 11_24 - v1.enriched.md
tests/: README.md  test_docling_adapter.py  test_intervening_content_guard.py  test_merger.py  test_public_api.py  test_tablemeta_fixtures.py
tests/fixtures/tablemeta/: headerless-width-drift.yaml
tests/integration/: conftest.py  test_fixtures.py
tests/integration/_tools/: regenerate_expected.py
tests/integration/fixtures/_synth/: generate.py
tests/integration/fixtures/distinct-tables-no-merge/: kaop-study-mixed-3pg.pt2.docling.json  kaop-study-mixed-3pg.pt2.expected.yaml  lab-panels-3pg.corp.docling.json  lab-panels-3pg.corp.expected.yaml
tests/integration/fixtures/false-merge/: category-rows-thematic-2pg.corp.docling.json  category-rows-thematic-2pg.corp.expected.yaml
tests/integration/fixtures/headerless-continuation/: 15-page-druglist.corp.docling.json  15-page-druglist.corp.expected.yaml  gene-symbols-6pg.pt2.docling.json  gene-symbols-6pg.pt2.expected.yaml  rct-study-table-5pg.pt2.docling.json  rct-study-table-5pg.pt2.expected.yaml  rrt-outcomes-2pg.pt2.docling.json  rrt-outcomes-2pg.pt2.expected.yaml  uveitis-case-series-5pg.pt2.docling.json  uveitis-case-series-5pg.pt2.expected.yaml
tests/integration/fixtures/inconsistent-header-detection/: covid-misc-labs-4pg.pt2.docling.json  covid-misc-labs-4pg.pt2.expected.yaml  lit-review-3pg.pt2.docling.json  lit-review-3pg.pt2.expected.yaml  retirement-portfolio.corp.docling.json  retirement-portfolio.corp.expected.yaml
tests/integration/fixtures/loose-header-layout/: biological-process-2pg.pt2.docling.json  biological-process-2pg.pt2.expected.yaml  symptoms-mediators-4pg.pt2.docling.json  symptoms-mediators-4pg.pt2.expected.yaml
tests/integration/fixtures/multilingual/: corporate-history-2pg.edinet.docling.json  corporate-history-2pg.edinet.expected.yaml  subsidiaries-4pg.edinet.docling.json  subsidiaries-4pg.edinet.expected.yaml
tests/integration/fixtures/orphan-pair/: varicose-veins-new-table-header-7pg.pt2.docling.json  varicose-veins-new-table-header-7pg.pt2.expected.yaml
tests/integration/fixtures/page-gap-too-large/: unrelated-tables-gap4.synth.docling.json  unrelated-tables-gap4.synth.expected.yaml
tests/integration/fixtures/repeated-header/: 4-page-substance-list.corp.docling.json  4-page-substance-list.corp.expected.yaml  cell-markers-4pg.pt2.docling.json  cell-markers-4pg.pt2.expected.yaml  challenge-categories-2pg.pt2.docling.json  challenge-categories-2pg.pt2.expected.yaml  fungal-taxonomy-4pg.pt2.docling.json  fungal-taxonomy-4pg.pt2.expected.yaml  rowspan-insurance-payout.corp.docling.json  rowspan-insurance-payout.corp.expected.yaml  search-strategies-2pg.pt2.docling.json  search-strategies-2pg.pt2.expected.yaml  study-sample-7pg.pt2.docling.json  study-sample-7pg.pt2.expected.yaml  themes-exemplars-3pg.pt2.docling.json  themes-exemplars-3pg.pt2.expected.yaml
tests/integration/fixtures/simple-continuation/: sample-table.corp.docling.json  sample-table.corp.expected.yaml
tests/integration/fixtures/spillover/: note-overflow.synth.docling.json  note-overflow.synth.expected.yaml
tests/integration/fixtures/width-drift/: abx-literature-review-7pg.pt2.docling.json  abx-literature-review-7pg.pt2.expected.yaml
