[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "table-stitcher"
version = "0.2.0"
description = "Reassemble tables split across page boundaries in PDF extraction"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "PebbleRoad" },
]
keywords = ["pdf", "tables", "docling", "extraction", "multipage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
]
dependencies = [
    "pandas>=1.5",
]

[project.optional-dependencies]
docling = [
    "docling>=2.60,<3",
    "docling-core>=2.50,<3",
]
dev = [
    "pytest>=7.0",
    "docling>=2.60,<3",
    "docling-core>=2.50,<3",
    "pyyaml>=6.0",
    "reportlab>=4.0",
]

[project.urls]
Homepage = "https://github.com/pebbleroad/table-stitcher"
Repository = "https://github.com/pebbleroad/table-stitcher"
Issues = "https://github.com/pebbleroad/table-stitcher/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/table_stitcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: exercises docling + OCR against real PDFs; slow (~3 min) and needs model downloads",
]
# Default: skip integration tests. They're heavyweight (OCR, model downloads)
# and can abort on local setups where docling/torch dependencies are unstable.
# Opt in with `pytest -m integration` or `pytest --override-ini='addopts='`.
addopts = "-m 'not integration'"
